<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Controle de Vendas</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Configurações</string>
    <string name="title_activity_principal">Controle de Vendas</string>
    <string name="contentdescription">Descricao</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="listar">Listar</string>
    <string name="title_activity_cadastro">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="endereco">Endereço</string>
    <string name="telefone">Telefone</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="voltar">Voltar</string>
    <string name="cadcliente">Cadastro de Clientes</string>
    <string name="title_activity_lista">Lista</string>
    <string name="title_activity_cad_produto">CadProduto</string>
    <string name="title_activity_cad_categoria">CadCategoria</string>
    <string name="cadcategoria">Cadastro de Categorias de Produtos	</string>
    <string name="cadproduto">Cadastro de Produtos</string>
    <string name="estoque">Estoque</string>
    <string name="valor">Valor R$</string>
    <string name="descricao">Descrição</string>
    <string name="subcategoria">SubCategoria</string>
    <string name="categoriapai">Categoria Pai</string>
    <string name="categoria">Categoria</string>
    <string name="desenvolvedor">- Desenvolvido por Daniel Chrome -</string>
    <string name="vendas">Vendas</string>
    <string name="produtos">Produtos</string>
    <string name="clientes">Clientes</string>
    <string name="categorias">Categorias</string>
    <string name="relatorios">Relatórios</string>
    <string name="configuracoes">Configurações</string>
    <string name="ok">OK</string>
    <string name="ctx_edit">Editar</string>
    <string name="ctx_delet">Deletar</string>
    <string name="delete_title">Exclusão</string>
    <string name="delete_message">Confirma exclusão?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="cliente">Cliente</string>
    <string name="prazopgto">Prazo de pagamento</string>
    <string name="cadvenda">Cadastro de Vendas</string>
    <string name="total">Total:</string>
    <string name="quantidade">Quantidade</string>
    <string name="receber">Receber</string>
    <string name="fatura_title">Faturar</string>
    <string name="fatura_message">Confirma pagamento de documento?</string>
    <string name="faturar">Faturar documento</string>
    <string name="replicar">Replicar</string>

    <string-array name="prazo">
        <item>A Vista</item>
        <item>30 dias</item>
        <item>30/60</item>
        <item>30/60/90</item>
        <item>30/60/90/120</item>
        <item>30/60/90/120/180</item>
    </string-array>

    <string name="title_activity_replicacao">Replicacao</string>
    <string name="action_settings">Settings</string>

</resources>