<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/contentdescription"
        android:src="@drawable/db4o" />

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btcadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:textSize="15sp" 
            android:onClick="abreCadastro"/>

        <Button
            android:id="@+id/btlistar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/listar"
            android:textSize="15sp" 
            android:onClick="abreLista"/>
    </TableLayout>

</LinearLayout>