<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CinzaClaro"
    android:clickable="true"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cadproduto"
        android:textColor="@color/CinzaEscuro"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descricao"
        android:textColor="@color/CinzaEscuro" />

    <EditText
        android:id="@+id/prd_eddescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bgedittext"
        android:enabled="false"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estoque"
        android:textColor="@color/CinzaEscuro" />

    <EditText
        android:id="@+id/prd_edestoque"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bgedittext"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor"
        android:textColor="@color/CinzaEscuro" />

    <EditText
        android:id="@+id/prd_edvalor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bgedittext"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:textColor="@color/CinzaEscuro" />

    <Spinner
        android:id="@+id/prd_spcategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/bgspinner"
        tools:listitem="@android:layout/simple_spinner_item" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp"
        >

        <ImageButton
            android:id="@+id/prd_incluir"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/voltar"
            android:onClick="executaOpcao"
            android:scaleType="centerInside"
            android:src="@drawable/more" />

        <ImageButton
            android:id="@+id/prd_alterar"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/salvar"
            android:onClick="executaOpcao"
            android:scaleType="centerInside"
            android:src="@drawable/refresh" />

        <ImageButton
            android:id="@+id/prd_pesquisar"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancelar"
            android:onClick="executaOpcao"
            android:scaleType="centerInside"
            android:src="@drawable/search" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal" 
        >

        <ImageButton
            android:id="@+id/prd_confirmar"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/voltar"
            android:onClick="executaOpcao"
            android:scaleType="centerInside"
            android:src="@drawable/confirm" />

        <ImageButton
            android:id="@+id/prd_cancelar"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/salvar"
            android:onClick="executaOpcao"
            android:scaleType="centerInside"
            android:src="@drawable/cancel" />

        <ImageButton
            android:id="@+id/prd_voltar"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/cancelar"
            android:onClick="executaOpcao"
            android:scaleType="centerInside"
            android:src="@drawable/back" />
    </LinearLayout>
    

</LinearLayout>