<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/list_vnd_codigo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:text="@string/vendas"
            android:textColor="@color/CinzaClaro"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/list_vnd_cliente"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20sp"
            android:text="@string/cliente"
            android:textColor="@color/CinzaClaro"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/list_vnd_data"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="5sp"
            android:text="@string/vendas"
            android:textColor="@color/CinzaClaro"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/list_vnd_total"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="40sp"
            android:text="@string/valor"
            android:textColor="@color/CinzaClaro"
            android:textSize="15sp" />
    </LinearLayout>

</LinearLayout>